--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<head>
 		<!--TITULO (PESTAÑA)-->
 			<title>NIVEL SOCIOECONÓMICO (NSE)</title>
-			<link type="image/png" rel='shortcut icon' href='./Icon/Icon.ITSE.png'></link>
+			<link type="image/png" rel='shortcut icon' href='./Icon/Icon.NSE.png'></link>
 		<!--META-->
 			<meta charset="utf-8">
 		<!--LINK DE REFERENCIA-->
